<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/contact"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center"
            />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/profile_pic"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/profile_picture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            >

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal">
                <ImageButton
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/ic_baseline_call_24"
                    android:background="@drawable/call_button_bg"
                    android:id="@+id/call_button"
                    android:onClick="call"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Call"
                    android:textSize="15dp"
                    android:textAlignment="center"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="75dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >

                <ImageButton
                    android:id="@+id/whatsapp"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/whatsapp1"
                    android:background="@color/background"
                    android:adjustViewBounds="true"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Whatsapp"
                    android:textSize="15dp"
                    android:textAlignment="center"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/about"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="8">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenumbertxt"
                    android:textSize="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="25dp"
                    android:id="@+id/number"
                    android:textStyle="bold"
                    android:paddingLeft="30dp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/call"
                    android:background="@drawable/call_button_bg"
                    android:id="@+id/call_button1"
                    android:layout_marginHorizontal="5dp"
                    android:onClick="call"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/about"
            >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address :"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/about"
            >
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/map"
                android:scaleType="centerCrop"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/about"
                android:id="@+id/gps"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/about"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:weightSum="10"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_developers"
            android:textSize="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rambalaji\nSrekaravarshan"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="30dp"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenumbertxt"
                    android:textSize="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+919080522066"
                    android:textSize="20dp"
                    android:id="@+id/bnumber"
                    android:textStyle="bold"
                    android:paddingLeft="30dp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/call"
                    android:background="@drawable/call_button_bg"
                    android:id="@+id/bcall"
                    android:layout_marginHorizontal="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Id"
            android:textSize="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="30dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    </LinearLayout>

</ScrollView>